@@ -111,5 +111,25 @@ this repository contains the full copyright notices and license terms. -->
             <field name="group" ref="group_stock"/>
         </record>
 
+        <record model="ir.sequence.type" id="sequence_type_inventory">
+            <field name="name">Inventory</field>
+            <field name="code">stock.inventory</field>
+        </record>
+        <record model="ir.sequence.type-res.group"
+            id="sequence_type_inventory_group_admin">
+            <field name="sequence_type" ref="sequence_type_inventory"/>
+            <field name="group" ref="res.group_admin"/>
+        </record>
+        <record model="ir.sequence.type-res.group"
+            id="sequence_type_inventory_group_stock_admin">
+            <field name="sequence_type" ref="sequence_type_inventory"/>
+            <field name="group" ref="group_stock_admin"/>
+        </record>
+
+        <record model="ir.sequence" id="sequence_inventory">
+            <field name="name">Inventory</field>
+            <field name="code">stock.inventory</field>
+        </record>
+
     </data>
 </tryton>
