@@ -2,6 +2,7 @@
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <form string="Stock Configuration">
+    <separator id="shipment" colspan="4" string="Shipments"/>
     <label name="shipment_in_sequence"/>
     <field name="shipment_in_sequence"/>
     <label name="shipment_in_return_sequence"/>
@@ -12,4 +13,7 @@ this repository contains the full copyright notices and license terms. -->
     <field name="shipment_out_return_sequence"/>
     <label name="shipment_internal_sequence"/>
     <field name="shipment_internal_sequence"/>
+    <separator id="inventory" colspan="4" string="Inventory"/>
+    <label name="inventory_sequence"/>
+    <field name="inventory_sequence"/>
 </form>
