@@ -2,6 +2,7 @@
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <tree string="Inventories">
+    <field name="number"/>
     <field name="location"/>
     <field name="date"/>
     <field name="state"/>
